# celegans_neural_sim

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
celegans_sim/: neural_sim_node.py  neural_viz_node.py  worm_body_node.py
launch/: celegans_sim.launch.py
resource/: connectome.json
urdf/: celegans.urdf
worlds/: agar_plate.world
